[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
linked_list_allocator = "0.9.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]

run-command = [
    "qemu-system-x86_64",
    "-drive",
    "format=raw,file={}",
    "-smp",
    "2",
    "-m",
    "4G",
    "-vga",
    "std",
]

test-success-exit-code = 33
